# estudo

./: teste
contrato360/: .gitignore  Dockerfile  README.md  docker-compose.yml  gera_database.ipynb  pipeline.yml  pom.xml  pyproject.toml  util.py
contrato360/app/: app1.py  utils.py
contrato360/app/.streamlit/: config.toml
contrato360/app/data/: database.db
contrato360/app/data_visualization/: detect.py  extract.py  plotly_agent.py  toolkit.py
contrato360/app/data_visualization/evaluate/: judge_text.py
langchain/: .gitignore  FirstJupyterNotebook.ipynb  LangChainOpenAI_test.ipynb  langchain_helper.py  main.py
teste/: 2020_MagazineLuiza_pt-BR.csv  data.json  document.csv  document.json  document.jsonl  evaluation_results_gpt-4o-mini_openai.csv  generated_testset.csv  output.xlsx  passo2.py  passo3.py  passo4.py  prompt2.py  results.csv  results.json  results.json.document  results_gpt-4o-mini_openai.csv  teste.py  teste3.py  teste4.py  xlsx2csv.py
teste/planilhas/: 2020_MagazineLuiza_pt-BR.csv  2020_MagazineLuiza_pt-BR.xlsx  2020_Vale_pt-BR.csv  2020_Vale_pt-BR.xlsx  2021_Braskem_pt-BR.csv  2021_Braskem_pt-BR.xlsx  2021_Itau_pt-BR.csv  2021_Itau_pt-BR.xlsx  2022_BRF_pt-BR.csv  2022_BRF_pt-BR.xlsx  2022_Braskem_pt-BR.csv  2022_Braskem_pt-BR.xlsx  2022_Petrobras_pt-BR.csv  2022_Petrobras_pt-BR.xlsx  2022_Votorantim_pt-BR.csv  2022_Votorantim_pt-BR.xlsx  2023_Eletrobras_pt-BR.csv  2023_Eletrobras_pt-BR.xlsx  2023_Embraer_pt-BR.csv  2023_Embraer_pt-BR.xlsx  2023_Globo_pt-BR.csv  2023_Globo_pt-BR.xlsx  2023_Suzano_pt-BR.csv  2023_Suzano_pt-BR.xlsx
(+16 files in other folders)
